# selective_search_py

./: .gitignore  CMakeLists.txt  README.md
examples/: demo_showcandidates.py  demo_showhierarchy.py
include/segment/: filter.h
selective_search/: __init__.py
tests/: test_color_space.py  test_features.py  test_selective_search.py
